--- a/basic/array.html
+++ b/basic/array.html
@@ -11,6 +11,7 @@
       // 1. 생성
       const cars = ["Bus", "Car", "Taxi"];
       const cars2 = new Array("Bus", "Car", "Taxi");
+      const others = ["과일", 1, 3.14, new Date(), {}]; //TODO: 다양한 타입을 담을 수 있다
 
       // 2. 메소드
       console.log("1. 배열크기 ", cars.length);
@@ -102,17 +103,58 @@
         console.log(element);
       }
 
-      array1.forEach(element => {
+      array1.forEach((element) => {
         console.log(element);
       });
 
       // TODO: 배열복사
       const array2 = [];
       array1.forEach((item) => {
-        array2.push(item)
+        array2.push(item);
       });
-      console.log("array2",array2);
-      
+      console.log("array2", array2);
+
+      //TODO: <깊은복사>
+      //TODO: ... : spread 연산자 - 배열 or Object 복사
+      const shallowCopy = [...array1];
+      console.log("shallowCopy", shallowCopy);
+
+      console.log("원본 array1 ", array1);
+      array1.push(28);
+      console.log("원본 push array1 ", array1);
+      console.log("복사본 ShallowCopy", shallowCopy);
+
+      // TODO: spread 연산자로 깊은복사 두 배열 합치기
+      const numbersOne = [1, 2, 3];
+      const numbersTwo = [4, 5, 6];
+      // numbersOne, numbersTwo 합쳐서 하나의 배열로 생성
+      const numbersCombined = [...numbersOne, ...numbersTwo];
+      console.log("합친 후 ", numbersCombined);
+
+      // 일반개념
+      const fruits = ["사과", "딸기", "포도"];
+      const apple = fruits[0];
+      const berry = fruits[1];
+      const grape = fruits[2];
+
+      //TODO: Destructuring : 구조분해
+      const [apple1, berry1, grape1] = fruits;
+
+      const numbers = [1, 2, 3, 4, 5, 6];
+      const [one, two, ...rest] = numbers;
+      console.log("one", one);
+      console.log("two", two);
+      console.log("rest", rest);
+
+      //TODO: 얕은 복사(주소복사)
+      const cars3 = cars2;
+      console.log("복사본 cars3", cars3);
+      console.log("원본 cars2", cars2);
+      // 원본에 요소 추가하는 경우
+      cars2.push("자전거");
+      // 복사본에도 요소가 추가됨
+      console.log("복사본 cars3", cars3);
+      console.log("원본 cars2", cars2);
     </script>
   </body>
 </html>
