--- a/event/exam5.html
+++ b/event/exam5.html
@@ -22,7 +22,10 @@
     </style>
   </head>
   <body>
-    <!-- bootstrap: 프론트엔드(html,css,javascript) 프레임워크(골라쓰기 가능) -->
+    <!-- bootstrap: 프론트엔드(html,css,javascript) 프레임워크(골라쓰기 가능) 
+        1. download 방식
+        2. cdn(Content Delivery Network)  방식 : 특정 서버에 올려둔 컨텐츠를 사용하는 방법
+    -->
     <div class="container">
       <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
